feat: Refactor About component and add projects, chore: Optimizations

--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
       content="Transformando ideias em soluções digitais inovadoras e funcionais."
     />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap"
-      rel="stylesheet"
-    />
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet" />
   </head>
-  <body class="bg-[#121212] text-white font-sans">
+  <body
+    class="bg-background-light text-text-dark dark:bg-background-dark dark:text-text-light font-body transition-colors duration-300"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
